--- a/FrontEnd/View/assets/js/Auth/temp2.html
+++ b/FrontEnd/View/assets/js/Auth/temp2.html
@@ -15,14 +15,14 @@
 
         fetchButton.click(function () {
           $.ajax({
-            url: "https://stereobatic-binder.000webhostapp.com/PHP/temp.php",
+            url: "https://stereobatic-binder.000webhostapp.com/PHP/temp0.php",
             type: "GET",
             dataType: "json",
             xhrFields: {
               withCredentials: true, // Include cookies in the request
             },
             success: function (data) {
-              console.log(data);
+              document.write(data);
             },
             error: function (xhr, textStatus, errorThrown) {
               console.error("AJAX request error:", textStatus, errorThrown);
